--- a/environment.yml
+++ b/environment.yml
@@ -102,6 +102,7 @@ dependencies:
       - protobuf==3.20.1
       - protpy==1.2.1
       - psutil==5.9.8
+      - p_tqdm==1.4.2
       - pyasn1==0.5.1
       - pyasn1-modules==0.3.0
       - pydeprecate==0.3.2
@@ -126,6 +127,7 @@ dependencies:
       - threadpoolctl==3.3.0
       - tqdm==4.62.3
       - urllib3==2.2.1
+      - varname==0.13.5
       - wandb==0.12.19
       - websocket-client==1.7.0
       - werkzeug==3.0.1
